Fixed Schedule Alignment

--- a/index.css
+++ b/index.css
@@ -24,6 +24,10 @@ body {
 
 }
 
+.panel-title>a:hover{
+  text-decoration: none;
+  cursor: pointer;
+}
 
 .panel {
   box-shadow:none;
